started express.js integration

--- a/views/about.html
+++ b/views/about.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>About</h1>
+    <nav>
+        <a href="/">homepage</a>
+        <a href="/about">about</a>
+    </nav>
 </body>
 </html>
