--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Home</h1>
     <h2>Welcome to Waikiki</h2>
+    <nav>
+        <a href="/">homepage</a>
+        <a href="/about">about</a>
+    </nav>
 </body>
 </html>
