--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
+    <%- include('./partials/nav.ejs') %>
     <h1>404</h1>
+
+    <%- include('./partials/footer.ejs') %>
+
 </body>
 </html>
