--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="=/"><h1>Welcom to Waikiki</h1></a>
-            <p>Just for a refresher</p>
-        </div>
-        <a href="/">Blogs</a>
-        <a href="/about">About</a>
-        <a href="blogs/create">New Blog</a>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="about contetnt">
         <h2>About Us</h2>
@@ -22,5 +10,6 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
     </div>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
