mvc model and express routes implemented

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,5 +6,5 @@
   </div>
   <a href="/">Blogs</a>
   <a href="/about">About</a>
-  <a href="blogs/create">New Blog</a>
+  <a href="/blogs/create">New Blog</a>
 </nav>
